fix: increase max height of heatmap tooltip list for better visibility

--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -521,7 +521,7 @@ h3 {
 }
 
 .heatmap-tooltip-list {
-	max-height: 90px;
+	max-height: 180px;
 	overflow-y: auto;
 
 	&::-webkit-scrollbar {
